Fix Java WASI env ordering in CI